--- a/.github/workflows/funcbench.yml
+++ b/.github/workflows/funcbench.yml
@@ -1,4 +1,4 @@
-on: repository_dispatch
+on:
   repository_dispatch:
     types: [funcbench_start]
 name: Funcbench Workflow
@@ -11,6 +11,7 @@ jobs:
       AUTH_FILE: ${{ secrets.TEST_INFRA_GKE_AUTH }}
       BRANCH: ${{ github.event.client_payload.BRANCH }}
       BENCH_FUNC_REGEX: ${{ github.event.client_payload.BENCH_FUNC_REGEX }}
+      PACKAGE_PATH: ${{ github.event.client_payload.PACKAGE_PATH }}
       GITHUB_TOKEN: ${{ secrets.PROMBOT_TOKEN }}
       GITHUB_ORG: prometheus
       GITHUB_REPO: prometheus
